🎨 Sticky top z-index fixed.

--- a/src/Presentation/WebUI/wwwroot/css/public.common.css
+++ b/src/Presentation/WebUI/wwwroot/css/public.common.css
@@ -89,6 +89,10 @@ body[data-bs-theme="dark"] [data-theme="dark"] {
     text-align: left;
 }
 
+.sticky-top {
+    z-index: 900;
+}
+
 
 /* CUSTOM */
 .lists-container {
